<resources>
    <string name="app_name">SunriseSunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="solar_noon">Solar noon</string>
    <string name="day_length">Day length</string>
    <string name="update">Update</string>
    <string name="search_button">Search</string>
    <string name="search_text_view">search</string>
    <string name="google_maps_key" translatable="false">AIzaSyAgLh9Z0V565eGbMdX_9hLvAK2uGcHWY_Q</string>
    <string name="google_places_key" translatable="false">AIzaSyCWzK_NIluaaDJxkuImWPbeK8upKdwjI4E</string>
</resources>
